namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccms-api-gateway-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-ccms-api-gateway-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "api-gateway"
    cloud-platform.justice.gov.uk/application: "CCMS API Gateway"
    cloud-platform.justice.gov.uk/owner: "CCMS API: ccms-api-gateway@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-ccms-api-gateway"
    cloud-platform.justice.gov.uk/team-name: "laa-ccms-devs"
    cloud-platform.justice.gov.uk/review-after: ""
